--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--w3schools, responsive-->
         <title>Page Title</title>
     </head>
 
