--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     </head>
 
 <body>
+    <nav>
+        <ul>
+            <button>🞬</button>
+          <li> 
+            <!-- link one -->
+            <a href="#aboutMe"> About Me </a>
+          </li>
+          <li>
+            <!-- link two -->
+             <a href="#projects"> Projects </a>
+          </li>
+          <li>
+            <!-- link three -->
+            <a href="#cv"> CV </a>
+          </li>
+          <li>
+            <!-- link four -->
+            <a href="#contacts"> Contacts </a>
+          </li>
+        </ul>
+      </nav>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
 </body>
