--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Image Header -->
 <div class="ImageHeader">
-    <img src="/images/Cloud9Consultin.png" alt="Cloud 9 Consulting" style="width:100%;min-height:100px;max-height:200px;">
+    <img src="/images/Cloud9Consulting.png" alt="Cloud 9 Consulting" style="width:100%;min-height:150px;max-height:300px;">
 </div>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
