--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <!-- Image Header -->
-<div class="ImageHeader">
+<div>
     <img src="/images/Cloud9Consulting.png" alt="Cloud 9 Consulting" style="width:100%;min-height:100px;max-height:250px;">
 </div>
     <h1>My First Heading</h1>
