--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--w3schools, responsive-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- w3schools, responsive -->
         <title>Page Title</title>
     </head>
 <body>
-    <!-- Image Header -->
+    <!-- Image Header SOURCE: W3schools -->
 <div>
     <img src="images/Cloud9Consulting3.png" alt="Cloud 9 Consulting" style="width:100%;min-height:75px;max-height:500px;">
 </div>
+    <!-- End Source -->
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
 </body>
