--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Image Header SOURCE: W3schools -->
 <div>
-    <img src="images/Cloud9Consulting3.png" alt="Cloud 9 Consulting" style="width:100%;min-height:75px;max-height:500px;">
+    <img src="images/Cloud9Consulting.png" alt="Cloud 9 Consulting" style="width:100%;min-height:75px;max-height:500px;">
 </div>
     <!-- End Source -->
     <h1>My First Heading</h1>
