--- a/index.html
+++ b/index.html
@@ -1,17 +1,150 @@
 <!DOCTYPE html>
+<html lang="en">
+<title>Cloud 9 Consulting</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- w3schools, responsive -->
-        <title>Page Title</title>
-    </head>
 <body>
-    <!-- Image Header SOURCE: W3schools -->
-<div>
-    <img src="images/Cloud9Consulting.png" alt="Cloud 9 Consulting" style="width:100%;min-height:75px;max-height:500px;">
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="homebutton">Home</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 1</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 3</a>
+    <a href="#" class="navbarpage">Page 4</a>
+    <a href="#" class="navbarpage">Page 5</a>
+
+  </div>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
+  </div>
 </div>
-    <!-- End Source -->
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+
+<!-- Header -->
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Company Title</h1>
+  <p class="w3-xlarge">Sub-heading</p>
+  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Button</button>
+</header>
+
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Page 1</h1>
+      <h5 class="w3-padding-32">Sub heading</h5>
+
+      <p class="w3-text-grey">Example paragraph</p>
+    </div>
+
+    <div class="w3-third w3-center">
+      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+    </div>
+  </div>
+</div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Page 2</h1>
+      <h5 class="w3-padding-32">Sub heading</h5>
+
+      <p class="w3-text-grey">Example paragraph</p>
+    </div>
+  </div>
+</div>
+
+<!-- Third Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Page 3</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+  
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
+    </div>
+  </div>
+
+<!-- Fourth Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Page 4</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+  
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
+    </div>
+  </div>
+
+<!-- Fifth Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Page 5</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+  
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
+    </div>
+  </div>
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">Footer</h1>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+ </div>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
+
 </body>
 </html>
