--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   </div>
 
-  <!-- Navbar on small screens
+<!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
@@ -28,7 +28,7 @@
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
   </div>
-</div> -->
+</div>
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
