Added comment to attribute work to Kathryn

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- All work as of November 17, 2020, 12:55PM EST done by Kathryn Little-->
+
 <!DOCTYPE html>
 <html lang="en">
 <title>Cloud9 Consulting</title>
