--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <body>
 
 <!-- Navbar -->
+<div class ="w3-top">
+  <ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a class="navbarbutton" href="#page1">Page 1</a></li>
+    <li><a class="navbarbutton" href="#page2">Page 2</a></li>
+    <li><a class="navbarbutton" href="#page3">Page 3</a></li>
+    <li><a class="navbarbutton" href="#page4">Page 4</a></li>
+    <li><a class="navbarbutton" href="#page5">Page 5</a></li>
+    <li><a class="navbarbutton" href="#page6">Page 6</a></li>
+  </ul>
+</div>
+
 <div class="w3-top">
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
@@ -19,6 +31,7 @@
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 5</a>
 
   </div>
+
 
 <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
