--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <body>
 
 <!-- Navbar -->
-<div class="fix-top">
-  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 4</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 5</a>
-  </div>
+
+<ul class="fix-top-navbar w3-hide-medium w3-hide-large">
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="navbutton" href="#news">Page 1</a></li>
+  <li><a class="navbutton" href="#">Page 2</a></li>
+  <li><a class="navbutton" href="#about">Page 3</a></li>
+  <li><a class="navbutton" href="#about">Page 4</a></li>
+  <li><a class="navbutton" href="#about">Page 5</a></li>
+</ul>
 
 
 <!-- Navbar on small screens -->
