--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- Navbar -->
 
-<ul class="fix-top-navbar w3-hide-medium w3-hide-large">
+<ul class="fix-top-navbar">
   <li><a class="active" href="#home">Home</a></li>
   <li><a class="navbutton" href="#news">Page 1</a></li>
   <li><a class="navbutton" href="#">Page 2</a></li>
@@ -19,17 +19,6 @@
   <li><a class="navbutton" href="#about">Page 4</a></li>
   <li><a class="navbutton" href="#about">Page 5</a></li>
 </ul>
-
-
-<!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
-  </div>
-</div>
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
