--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 
 <ul class="fix-top-navbar">
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="navbutton" href="#home">Home</a></li>
   <li><a class="navbutton" href="#news">Page 1</a></li>
   <li><a class="navbutton" href="#">Page 2</a></li>
   <li><a class="navbutton" href="#about">Page 3</a></li>
