--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <!-- Navbar -->
 
-<ul class="fix-top-navbar">
+<ul class="fix-top-navbar display-small">
   <li><a class="navbutton" href="#home">Home</a></li>
-  <li><a class="navbutton" href="#news">Page 1</a></li>
-  <li><a class="navbutton" href="#">Page 2</a></li>
-  <li><a class="navbutton" href="#about">Page 3</a></li>
-  <li><a class="navbutton" href="#about">Page 4</a></li>
-  <li><a class="navbutton" href="#about">Page 5</a></li>
+  <li><a class="navbutton" href="#page1">Page 1</a></li>
+  <li><a class="navbutton" href="#page2">Page 2</a></li>
+  <li><a class="navbutton" href="#page3">Page 3</a></li>
+  <li><a class="navbutton" href="#page4">Page 4</a></li>
+  <li><a class="navbutton" href="#page5">Page 5</a></li>
 </ul>
 
 <!-- Header -->
