--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
 <!-- Navbar -->
-
-<ul class="fix-top-navbar display-small">
+<!-- Large Screen -->
+<ul class="fix-top-navbar display-large">
   <li><a class="navbutton" href="#home">Home</a></li>
   <li><a class="navbutton" href="#page1">Page 1</a></li>
   <li><a class="navbutton" href="#page2">Page 2</a></li>
@@ -19,6 +19,17 @@
   <li><a class="navbutton" href="#page4">Page 4</a></li>
   <li><a class="navbutton" href="#page5">Page 5</a></li>
 </ul>
+
+<!-- Small Screen -->
+<ul class="fix-top-navbar display-small">
+  <li><a class="navbutton-small" href="#home">Home</a></li>
+  <li><a class="navbutton-small" href="#page1">Page 1</a></li>
+  <li><a class="navbutton-small" href="#page2">Page 2</a></li>
+  <li><a class="navbutton-small" href="#page3">Page 3</a></li>
+  <li><a class="navbutton-small" href="#page4">Page 4</a></li>
+  <li><a class="navbutton-small" href="#page5">Page 5</a></li>
+</ul>
+
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
