--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 
 <!-- Header -->
-<header class="cloud9photo">
+<header>
+  <div class="cloud9photo" height=2000 width=500></div>
 </header>
 
 <!-- First Grid -->
