--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <!-- Navbar -->
 <!-- Large Screen -->
-<ul class="fix-top-navbar display-large">
-  <li><a class="navbutton" href="#home">Home</a></li>
-  <li><a class="navbutton" href="#page1">Page 1</a></li>
-  <li><a class="navbutton" href="#page2">Page 2</a></li>
-  <li><a class="navbutton" href="#page3">Page 3</a></li>
-  <li><a class="navbutton" href="#page4">Page 4</a></li>
-  <li><a class="navbutton" href="#page5">Page 5</a></li>
+<ul class="topnav">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#page1">Page 1</a></li>
+  <li><a href="#page2">Page 2</a></li>
+  <li><a href="#page3">Page 3</a></li>
+  <li><a href="#page4">Page 4</a></li>
+  <li><a href="#page5">Page 5</a></li>
 </ul>
 
 <!-- Small Screen -->
@@ -32,8 +32,10 @@
 
 
 <!-- Header -->
-<header>
-  <div class="cloud9photo" height=2000 width=500></div>
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
+  <p class="w3-xlarge">Sub-heading</p>
+  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Button</button>
 </header>
 
 <!-- First Grid -->
