responsive nav bar

--- a/index.html
+++ b/index.html
@@ -12,24 +12,13 @@
 <!-- Navbar -->
 <!-- Large Screen -->
 <ul class="topnav">
-  <li><a href="#home">Home</a></li>
+  <li><a class="active" href="#home">Home</a></li>
   <li><a href="#page1">Page 1</a></li>
   <li><a href="#page2">Page 2</a></li>
   <li><a href="#page3">Page 3</a></li>
   <li><a href="#page4">Page 4</a></li>
-  <li><a href="#page5">Page 5</a></li>
+  <li class="right"><a href="#page5">Page 5</a></li>
 </ul>
-
-<!-- Small Screen -->
-<ul class="fix-top-navbar display-small">
-  <li><a class="navbutton-small" href="#home">Home</a></li>
-  <li><a class="navbutton-small" href="#page1">Page 1</a></li>
-  <li><a class="navbutton-small" href="#page2">Page 2</a></li>
-  <li><a class="navbutton-small" href="#page3">Page 3</a></li>
-  <li><a class="navbutton-small" href="#page4">Page 4</a></li>
-  <li><a class="navbutton-small" href="#page5">Page 5</a></li>
-</ul>
-
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
