--- a/index.html
+++ b/index.html
@@ -10,15 +10,27 @@
 <body>
 
 <!-- Navbar -->
-<!-- Large Screen -->
-<ul class="topnav">
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#page1">Page 1</a></li>
-  <li><a href="#page2">Page 2</a></li>
-  <li><a href="#page3">Page 3</a></li>
-  <li><a href="#page4">Page 4</a></li>
-  <li class="right"><a href="#page5">Page 5</a></li>
-</ul>
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 1</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 3</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 4</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 5</a>
+
+  </div>
+
+<!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
+  </div>
+</div>
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
@@ -138,4 +150,5 @@ function myFunction() {
 
 </body>
 </html>
+
 
