revert to am template

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- All work as of November 17, 2020, 12:55PM EST done by Kathryn Little-->
+<!-- All work as of November 20, 2020, 12:00AM EST done by Kathryn Little-->
 
 <!DOCTYPE html>
 <html lang="en">
