--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 <header class="w3-container w3-blue w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
   <p class="w3-xlarge">Sub-heading</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Button</button>
 </header>
 
 <!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
+<div class="w3-row-padding w3-padding-64 w3-container w3-center">
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Page 1</h1>
