--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </header>
 
 <!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container w3-center">
+<div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Page 1</h1>
