--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 
 <!-- Header -->
 <header class="w3-container w3-blue w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
-  <p class="w3-xlarge">Sub-heading</p>
+  <img class="w3-image" src="images/TriplePeakVancouverIsland.jpg" alt="Triple Peak" width="1500" height="800">
+  <div class="w3-display-middle">
+    <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
+    <p class="w3-xlarge">Sub-heading</p>
+  </div>
 </header>
 
 <!-- First Grid -->
