--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- All work as of November 20, 2020, 10:00PM EST done by Kathryn Little-->
+<!-- edits made by Kazuto Nov 21-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +13,7 @@
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-blue w3-card w3-left-align w3-large">
+  <div class="w3-bar w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 1</a>
@@ -34,7 +35,7 @@
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-blue w3-center" style="padding:128px 16px">
+<header class="w3-container w3-center" style="padding:62px 16px">
   <img class="w3-image" src="images/TriplePeakVancouverIsland.jpg" alt="Triple Peak" width="1500" height="800">
   <div class="w3-display-middle">
     <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
