added relative links to other pages

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <div class="w3-top">
   <div class="w3-bar w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 2</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
+    <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
+    <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 3</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 4</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 5</a>
@@ -36,7 +36,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-center" style="padding:62px 16px">
-  <img class="w3-image" src="images/TriplePeakVancouverIsland.jpg" alt="Triple Peak" width="1500" height="800">
+  <img class="w3-image" src="images/TriplePeakVancouverIsland.jpg" alt="Triple Peak, Vancouver Island" width="1500" height="800">
   <div class="w3-display-middle">
     <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
     <p class="w3-xlarge">Sub-heading</p>
