--- a/people.html
+++ b/people.html
@@ -31,3 +31,10 @@
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
   </div>
 </div>
+
+<header class="w3-container w3-center" style="padding:62px 16px">
+    <div class="w3-display-middle">
+      <h1 class="w3-margin w3-jumbo">Who We Are</h1>
+      <p class="w3-xlarge">Sub-heading</p>
+    </div>
+  </header>
