--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
+    <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
+    <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
