--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      <i class="w3-padding-64 w3-text-red"></i>
     </div>
   </div>
 </div>
@@ -63,7 +63,7 @@
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
     <div class="w3-twothird">
@@ -79,7 +79,7 @@
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
       </div>
   
       <div class="w3-twothird">
@@ -95,7 +95,7 @@
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
       </div>
   
       <div class="w3-twothird">
@@ -111,7 +111,7 @@
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
       </div>
   
       <div class="w3-twothird">
