--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <header class="w3-container w3-center" style="padding:62px 16px">
   <img class="w3-image" src="images/TriplePeakVancouverIsland.jpg" alt="Triple Peak, Vancouver Island" width="1500" height="800">
   <div class="w3-display-middle">
-    <h1 class="w3-margin w3-jumbo">Cloud9 Consulting</h1>
+    <h1 class="w3-margin">Cloud9 Consulting</h1>
     <p class="w3-xlarge">Sub-heading</p>
   </div>
 </header>
@@ -47,7 +47,7 @@
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Page 1</h1>
+      <h2>Page 1</h2>
       <h5 class="w3-padding-32">Sub heading</h5>
 
       <p class="w3-text-grey">Example paragraph</p>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="w3-twothird">
-      <h1>Page 2</h1>
+      <h2>Page 2</h2>
       <h5 class="w3-padding-32">Sub heading</h5>
 
       <p class="w3-text-grey">Example paragraph</p>
@@ -83,7 +83,7 @@
       </div>
   
       <div class="w3-twothird">
-        <h1>Page 3</h1>
+        <h2>Page 3</h2>
         <h5 class="w3-padding-32">Sub heading</h5>
   
         <p class="w3-text-grey">Example paragraph</p>
@@ -99,7 +99,7 @@
       </div>
   
       <div class="w3-twothird">
-        <h1>Page 4</h1>
+        <h2>Page 4</h2>
         <h5 class="w3-padding-32">Sub heading</h5>
   
         <p class="w3-text-grey">Example paragraph</p>
@@ -115,7 +115,7 @@
       </div>
   
       <div class="w3-twothird">
-        <h1>Page 5</h1>
+        <h2>Page 5</h2>
         <h5 class="w3-padding-32">Sub heading</h5>
   
         <p class="w3-text-grey">Example paragraph</p>
