fixed position on header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <header class="w3-container w3-center" style="padding:62px 16px">
   <img class="w3-image" src="images/TriplePeakVancouverIsland.jpg" alt="Triple Peak, Vancouver Island" width="1500" height="800">
   <div class="w3-display-middle">
-    <h1 class="w3-margin">Cloud9 Consulting</h1>
+    <h1 class="fixed w3-margin">Cloud9 Consulting</h1>
     <p class="w3-xlarge">Sub-heading</p>
   </div>
 </header>
