--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-center" style="padding:62px 16px">
-  <img class="imgsize w3-image" src="images/TriplePeakVancouverIsland_1500.jpg" alt="Triple Peak, Vancouver Island" width="1500" height="1125">
+  <img class="w3-image" src="images/TriplePeakVancouverIsland_1500.jpg" alt="Triple Peak, Vancouver Island" width="1500" height="1125">
   <div class="w3-display-middle">
     <h1 class="w3-margin"><span class="cloud9">Cloud9</span><span class="w3-hide-small"> Consulting</span></h1>
     <p class="w3-xlarge">Sub-heading</p>
