change header image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-center" style="padding:62px 16px">
-  <img class="w3-image" src="images/Cloud9Consulting.jpg" alt="Triple Peak, Vancouver Island" width="1500" height="1125">
+  <img class="w3-image" src="images/Cloud9Consulting.jpg" alt="Cloud 9 Consulting" width="1500" height="1125">
   <div class="w3-display-middle">
   </div>
 </header>
