--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Page 1</h1>
-      <h5 class="w3-padding-32">Sub heading</h5>
+      <h1>Welcome</h1>
+      <h5 class="w3-padding-32">sub header</h5>
 
-      <p class="w3-text-grey">Example paragraph</p>
+      <p class="w3-text-grey">Welcome to our page - add more text here.</p>
     </div>
 
     <div class="w3-third w3-center">
@@ -89,37 +89,6 @@
     </div>
   </div>
 
-<!-- Fourth Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-    <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
-      </div>
-  
-      <div class="w3-twothird">
-        <h1>Page 4</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-  
-        <p class="w3-text-grey">Example paragraph</p>
-      </div>
-    </div>
-  </div>
-
-<!-- Fifth Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-    <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
-      </div>
-  
-      <div class="w3-twothird">
-        <h1>Page 5</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-  
-        <p class="w3-text-grey">Example paragraph</p>
-      </div>
-    </div>
-  </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
     <h1 class="w3-margin w3-xlarge">Footer</h1>
