--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <header class="w3-container w3-center" style="padding:62px 16px">
   <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
   <div class="w3-display-middle">
+    <h1>Cloud 9 Consulting</h1>
   </div>
 </header>
 
