--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-card w3-left-align w3-large">
+  <div class="w3-bar w3-card w3-left-align w3-large w3-white">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-blue w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
     <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
@@ -34,12 +34,13 @@
   </div>
 </div>
 
+<div>
+  <h1>Cloud 9 Consulting</h1>
+</div>
+
 <!-- Header -->
 <header class="w3-container w3-center" style="padding:62px 16px">
   <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
-  <div class="w3-display-middle">
-    <h1>Cloud 9 Consulting</h1>
-  </div>
 </header>
 
 <!-- First Grid -->
