--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
   <div class="w3-display-middle">
     <h1 class="w3-margin w3-jumbo">Cloud 9 Consulting</h1>
+    <p class="w3-xlarge">GIS Solutions</p>
   </div>
 </header>
 
