fixed indenting, added missing end tags

--- a/projects.html
+++ b/projects.html
@@ -2,39 +2,42 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<title>Projects</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<head>
+  <title>Projects</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">  
+</head>
 
 <body>
+  <!-- Navbar -->
+  <div class="w3-top">
+    <div class="w3-bar w3-card w3-left-align w3-large">
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
+      <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
+      <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 3</a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 4</a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 5</a>
 
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
-    <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
-    <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 4</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Page 5</a>
+    </div>
 
+  <!-- Navbar on small screens -->
+    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
+    </div>
   </div>
 
-<!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
-  </div>
-</div>
-
-<header class="w3-container w3-center" style="padding:62px 16px">
+  <header class="w3-container w3-center" style="padding:62px 16px">
     <div class="w3-display-middle">
       <h1 class="w3-margin w3-jumbo">What We Do</h1>
       <p class="w3-xlarge">Sub-heading</p>
     </div>
   </header>
+</body>
+</html>
