--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,9 @@
   <!-- Navbar -->
   <div class="w3-top">
     <div class="w3-bar w3-card w3-left-align w3-large">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white
+       w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu">
+       <i class="fa fa-bars"></i></a>
       <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
       <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
       <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
@@ -39,5 +41,61 @@
       <p class="w3-xlarge">Sub-heading</p>
     </div>
   </header>
+
+  <!-- GEOM 101-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- GEOM 102-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- GEOM 103-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- GEOM 104-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- GEOM 65-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- GEOM 66-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- GEOM 67-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
+
+  <!-- SURV 21-->
+  <div class="w3-content">
+    <div>
+      <h1>Hello</h1>
+    </div>
+  </div>
 </body>
 </html>
