--- a/projects.html
+++ b/projects.html
@@ -43,58 +43,122 @@
   </header>
 
   <!-- GEOM 101-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Web Design</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- GEOM 102-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Geovisualization</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- GEOM 103-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Spatial Analysis</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- GEOM 104-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Geodesy</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- GEOM 65-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Database Modeling</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- GEOM 66-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Remote Sensing</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- GEOM 67-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Programming and Automation</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 
   <!-- SURV 21-->
-  <div class="w3-content">
-    <div>
-      <h1>Hello</h1>
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Surveying</h1>
+        <h5 class="w3-padding-32">Sub heading</h5>
+        <p class="w3-text-grey">Example paragraph</p>
+      </div>
     </div>
   </div>
 </body>
