--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,20 @@
     </div>
   </header>
 
+  <div class='flex'>
+    <div>Web Design</div>
+    <div>Geovisualization</div>
+    <div>Spatial Analysis</div>
+    <div>Geodesy</div>
+  </div>
+
+  <div class='flex'>
+    <div>Database Modeling</div>
+    <div>Remote Sensing</div>
+    <div>Programming and Automation</div>
+    <div>Surveying</div>
+  </div>
+
   <!-- GEOM 101-->
   <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
