--- a/projects.html
+++ b/projects.html
@@ -42,18 +42,20 @@
     </div>
   </header>
 
-  <div class='flex'>
-    <div>Web Design</div>
-    <div>Geovisualization</div>
-    <div>Spatial Analysis</div>
-    <div>Geodesy</div>
-  </div>
+  <div class='w3-content w3-twothird'>
+    <div class='flex'>
+      <div class='quarterWidth'>Web Design</div>
+      <div class='quarterWidth'>Geovisualization</div>
+      <div class='quarterWidth'>Spatial Analysis</div>
+      <div class='quarterWidth'>Geodesy</div>
+    </div>
 
-  <div class='flex'>
-    <div>Database Modeling</div>
-    <div>Remote Sensing</div>
-    <div>Programming and Automation</div>
-    <div>Surveying</div>
+    <div class='flex'>
+      <div class='quarterWidth'>Database Modeling</div>
+      <div class='quarterWidth'>Remote Sensing</div>
+      <div class='quarterWidth'>Programming and Automation</div>
+      <div class='quarterWidth'>Surveying</div>
+    </div>
   </div>
 
   <!-- GEOM 101-->
