further changes to course subheadings

--- a/projects.html
+++ b/projects.html
@@ -36,13 +36,11 @@
   </div>
 
   <header class="w3-container w3-center" style="padding:62px 16px">
-    <div class="w3-display-middle">
       <h1 class="w3-margin w3-jumbo">What We Do</h1>
       <p class="w3-xlarge">Sub-heading</p>
-    </div>
   </header>
 
-  <div class='w3-content w3-twothird'>
+  <div class='w3-content w3-twothird w3-center'>
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
       <div class='quarterWidth'>Geovisualization</div>
