changed sub header to italic

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="w3-display-middle">
       <h1 class="headertext w3-margin w3-jumbo">Cloud 9 Consulting</h1>
-      <p class="w3-xlarge">GIS Solutions</p>
+      <p class="w3-xlarge white-italic">GIS Solutions</p>
     </div>
   </header>
 
