edit background colour of grids on project page

--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
   </div>
 
   <!-- GEOM 102-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
         <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
@@ -99,7 +99,7 @@
   </div>
 
   <!-- GEOM 104-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
         <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
@@ -129,7 +129,7 @@
   </div>
 
   <!-- GEOM 66-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
         <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
@@ -159,7 +159,7 @@
   </div>
 
   <!-- SURV 21-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
         <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
