font style changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>Welcome</h1>
         <h5 class="w3-padding-32">sub header</h5>
 
-        <p class="w3-text-grey">Welcome to our page - add more text here.</p>
+        <p class="w3-text-grey">Welcome to our page.</p>
       </div>
 
       <div class="w3-third w3-center">
