--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- All work as of November 20, 2020, 10:00PM EST done by Kathryn Little-->
-<!-- edits made by Kazuto Nov 21-->
+<!-- Html for template by Kate - Template Source: w3schools https://www.w3schools.com/w3css/tryw3css_templates_start_page.htm --> 
+<!-- edits made by Kazuto Nov 21, 22, 23-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -44,7 +44,7 @@
     <div class="w3-content">
       <div class="w3-twothird">
         <h1>Welcome</h1>
-        <h5 class="w3-padding-32">sub header</h5>
+        <h5 class="w3-padding-32">Sub heading</h5>
 
         <p class="w3-text-grey">Welcome to our page.</p>
       </div>
