--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Navbar -->
   <div class="w3-top">
-    <div class="w3-bar w3-card w3-left-align w3-large">
+    <div class="w3-bar w3-card w3-left-align w3-large w3-white">
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white
        w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu">
        <i class="fa fa-bars"></i></a>
