--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
       </div>
     </div>
 
+
+  <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+      <h1 class="w3-margin w3-xlarge">Footer</h1>
+  </div>
+
   <!-- Footer -->
   <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
     <div class="w3-xlarge w3-padding-32">
