--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red"></i>
+        <i class="w3-padding-64"></i>
       </div>
     </div>
   </div>
@@ -59,7 +59,7 @@
   <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
+        <i class="w3-padding-64 w3-margin-right"></i>
       </div>
 
       <div class="w3-twothird">
@@ -75,7 +75,7 @@
   <div class="w3-row-padding w3-padding-64 w3-container">
       <div class="w3-content">
         <div class="w3-third w3-center">
-          <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
+          <i class="w3-padding-64 w3-margin-right"></i>
         </div>
     
         <div class="w3-twothird">
