--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Html for template by Kate - Template Source: w3schools https://www.w3schools.com/w3css/tryw3css_templates_start_page.htm --> 
 <!-- edits made by Kazuto Nov 21, 22, 23-->
+<!-- edits made by Mark Nov 24, cleaning up unused classes-->
 
 <!DOCTYPE html>
 <html lang="en">
