--- a/people.html
+++ b/people.html
@@ -1,4 +1,5 @@
 <!-- Page created by Kazuto Nov 21-->
+<!-- edits made by Mark Nov 24, cleaning up unused classes-->
 
 <!DOCTYPE html>
 <html lang="en">
