--- a/people.html
+++ b/people.html
@@ -45,13 +45,13 @@
       <div class='thirdWidth'>Kazuto</div>
     </div>
 
-  <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+  <div class="w3-container w3-black w3-center">
     <h1 class="w3-margin w3-xlarge">Footer</h1>
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-    <div class="w3-xlarge w3-padding-32">
+  <footer class="w3-container w3-center">  
+    <div class="w3-xlarge">
     </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
