--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@
   </div>
 
   <!-- GEOM 67-->
-  <div class="w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
       <div class="w3-center">
         <i>test</i>
