Comment Out Tests for now

--- a/projects.html
+++ b/projects.html
@@ -57,9 +57,9 @@
   <!-- GEOM 101-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
+      <!--div class="w3-third w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div>
         <h1>Web Design</h1>
@@ -72,9 +72,9 @@
   <!-- GEOM 102-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
+      <!--div class="w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div>
         <h1>Geovisualization</h1>
@@ -87,9 +87,9 @@
   <!-- GEOM 103-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
+      <!--div class="w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div>
         <h1>Spatial Analysis</h1>
@@ -102,9 +102,9 @@
   <!-- GEOM 104-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
+      <!--div class="w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div class>
         <h1>Geodesy</h1>
@@ -132,9 +132,9 @@
   <!-- GEOM 66-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
-        <i class="w3-margin-right">test</i>
-      </div>
+      <!--div class="w3-center">
+        <i>test</i>
+      </div-->
   
       <div>
         <h1>Remote Sensing</h1>
@@ -147,9 +147,9 @@
   <!-- GEOM 67-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
+      <!--div class="w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div>
         <h1>Programming and Automation</h1>
@@ -162,9 +162,9 @@
   <!-- SURV 21-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
+      <!--div class="w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div>
         <h1>Surveying</h1>
