--- a/projects.html
+++ b/projects.html
@@ -117,9 +117,9 @@
   <!-- GEOM 65-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-center">
+      <!--div class="w3-center">
         <i>test</i>
-      </div>
+      </div-->
   
       <div>
         <h1>Database Modeling</h1>
