--- a/people.html
+++ b/people.html
@@ -37,7 +37,7 @@
         <h1 class="w3-margin w3-jumbo">Who We Are</h1>
         <p class="w3-xlarge">Sub-heading</p>
   </header>
-
+<!--November 24, 2020-->
 <!--Mark-->
   <div class='w3-content w3-center'>
     <div class='flex'>
