--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,10 @@
   </header>
 
   <div class='w3-content w3-center'>
+    <!-- Kate - December 1, 2020 -->
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
+        <img src='images/icons_webdesign.png' width='250' height='270'>
       <div class='quarterWidth'>Geovisualization</div>
       <div class='quarterWidth'>Spatial Analysis</div>
       <div class='quarterWidth'>Geodesy</div>
