adjust position of web design image

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
     <!-- Kate - December 1, 2020 -->
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
-        <img src='images/icons_webdesign.png' width='250' height='270'>
+        <img class='quarterWidth' src='images/icons_webdesign.png' width='250' height='270'>
       <div class='quarterWidth'>Geovisualization</div>
       <div class='quarterWidth'>Spatial Analysis</div>
       <div class='quarterWidth'>Geodesy</div>
