--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     var x = document.getElementById("navDemo");
     if (x.className.indexOf("w3-show") == -1) {
       x.className += "w3-show";
-    } else { 
+    } 
+    else { 
       x.className = x.className.replace("w3-show", "");
     }
   }
