navbar dropdown and main page text

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
-      <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
+      <a href="people.html" class="w3-show w3-bar-item w3-button w3-padding-large">People</a>
+      <a href="projects.html" class="w3-show w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
 <!--End of Owner: Kate -->
@@ -46,10 +46,14 @@
   <div class="w3-container">
     <div class="w3-content">
       <div>
-        <h1>Welcome</h1>
-        <h5>Sub heading</h5>
+        <h1>About Us</h1>
+        <h5>Cloud 9 Consulting</h5>
 
-        <p>Welcome to our page.</p>
+        <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
+          private industry and the public service sector. We have a range of specialties including Remote Sensing and Image Analysis,
+          Spatial Analysis, and Cartographic Solutions. For our full range of services and examples of past projects please visit our
+          projects page.
+        </p>
       </div>
 
       <div class="w3-center">
