--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <div id="navDemo" class="2w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
       <a href="people.html" class="w3-show w3-bar-item w3-button w3-padding-large">People</a>
       <a href="projects.html" class="w3-show w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
@@ -42,6 +42,7 @@
     </div>
   </header>
 
+  <!-- Owner: Kate -->
   <!-- First Grid -->
   <div class="w3-container">
     <div class="w3-content">
@@ -61,6 +62,7 @@
       </div>
     </div>
   </div>
+  <!-- End of Kate -->
 
   <!-- Second Grid -->
   <div class="w3-light-grey w3-container">
