--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="2w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a href="people.html" class="w3-show w3-bar-item w3-button w3-padding-large">People</a>
-      <a href="projects.html" class="w3-show w3-bar-item w3-button w3-padding-large">Projects</a>
+    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+      <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
+      <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
 <!--End of Owner: Kate -->
@@ -115,8 +115,7 @@
     var x = document.getElementById("navDemo");
     if (x.className.indexOf("w3-show") == -1) {
       x.className += "w3-show";
-    } 
-    else { 
+    } else { 
       x.className = x.className.replace("w3-show", "");
     }
   }
