center align sub heading

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="w3-display-middle">
       <!-- Owner: Kate -->
       <h1 class="header-small header-medium header-large headertext w3-margin w3-jumbo">Cloud 9 Consulting</h1>
-      <p class="w3-xlarge">GIS Solutions</p>
+      <p class="center-align w3-xlarge">GIS Solutions</p>
     </div>
   </header>
 
