Projects work in progress

--- a/projects.html
+++ b/projects.html
@@ -35,17 +35,32 @@
 
   <header class="w3-container w3-center w3-padding-62-16">
       <h1 class="w3-margin w3-jumbo">What We Do</h1>
-      <p class="w3-xlarge">Sub-heading</p>
+      <p class="w3-xlarge w3-center">Services Offered</p>
   </header>
 
   <div class='w3-content w3-center'>
     <!-- Kate - December 1, 2020 -->
+    <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
-        <img class='quarterWidth' src='images/icons_webdesign.png' width='250' height='270'>
       <div class='quarterWidth'>Geovisualization</div>
       <div class='quarterWidth'>Spatial Analysis</div>
       <div class='quarterWidth'>Geodesy</div>
+    </div>
+
+    <div class='flex'>
+      <a href='#webdesign' class='quarterWidth'>
+        <img src='images/icons_webdesign125.png' width='125' height='110'>        
+      </a>
+      <a href='#geovis' class='quarterWidth'>
+        <img src='images/icons_geovis125.png' width='125' height='100'>    
+      </a>
+      <a href='#spatial' class='quarterWidth'>
+        <img src='images/icons_spatial125.png' width='125' height='103'>
+      </a>
+      <a href='geodesy' class='quarterWidth'>
+       <img  src='images/icons_geodesy125.png' width='125' height='120'>
+      </a>
     </div>
 
     <div class='flex'>
@@ -54,19 +69,35 @@
       <div class='quarterWidth'>Programming and Automation</div>
       <div class='quarterWidth'>Surveying</div>
     </div>
+
+    <div class='flex'>
+      <a href='#database' class='quarterWidth'> 
+        <img src='images/icons_database125.png' width='125' height='100'>
+      </a> 
+      <a href='#remote' class = 'quarterWidth'>
+        <img src='images/icons_remote125.png' width='125' height='119'>
+      </a>
+      <a href='#programming' class='quarterWidth'>
+        <img src='images/icons_programming125.png' width='125' height='90'>
+      </a>
+      <a href='#survey' class='quarterWidth'>
+        <img src='images/icons_survey125.png' width='125' height='126'>
+      </a>
+    </div>
   </div>
 
   <!-- GEOM 101-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-third w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Web Design</h1>
+        <h1 id='webdesign' class='anchor'>Web Design</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <p>
+          <ul>
+            <li>Website design even more impressive than this</li>
+            <li>Responsive websites for desktop and mobile environments</li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
@@ -74,14 +105,16 @@
   <!-- GEOM 102-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Geovisualization</h1>
+        <h1 id='geovis' class='anchor'>Geovisualization</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <p>
+          <ul>
+            <li>Reference or Thematic mapping solutions</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
@@ -89,14 +122,16 @@
   <!-- GEOM 103-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Spatial Analysis</h1>
+        <h1 id='spatial' class='anchor'>Spatial Analysis</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <p>
+          <ul>
+            <li>Digitizing</li>
+            <li>Model building and workflow design</li>
+            <li>Mulit-criteria analysis</li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
@@ -104,12 +139,8 @@
   <!-- GEOM 104-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
-      <div class>
-        <h1>Geodesy</h1>
+      <div class class='anchor'>
+        <h1 id='geodesy'>Geodesy</h1>
         <h5>Sub heading</h5>
         <p>Example paragraph</p>
       </div>
@@ -119,14 +150,14 @@
   <!-- GEOM 65-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Database Modeling</h1>
+        <h1 id='database' class='anchor'>Database Modeling</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <p>
+          <ul>
+            <li>Database creation or improvement</li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
@@ -134,14 +165,16 @@
   <!-- GEOM 66-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Remote Sensing</h1>
+        <h1 id='remote' class='anchor'>Remote Sensing</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
@@ -149,14 +182,14 @@
   <!-- GEOM 67-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Programming and Automation</h1>
+        <h1 id='programming' class='anchor'>Programming and Automation</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -164,14 +197,12 @@
   <!-- SURV 21-->
   <div class="w3-container">
     <div class="w3-content">
-      <!--div class="w3-center">
-        <i>test</i>
-      </div-->
-  
       <div>
-        <h1>Surveying</h1>
+        <h1 id='survey' class='anchor'>Surveying</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <ul>
+          <li>Creation of survey plans on AutoCAD from survey notes</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -182,7 +213,7 @@
 
   <!-- Footer -->
   <footer class="w3-container w3-center">  
-    <div class="w3-xlarge">
+    <div class="w3-xlarge" class='anchor'>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
